--- a/manic/0_intro.tex
+++ b/manic/0_intro.tex
@@ -3,8 +3,9 @@ enable important new applications in environmental sensing, in- and on-body
 medical implants, civil infrastructure monitors, and even tiny chip-scale
 satellites.
 % 
-\autoref{chapter:sonic} described how these devices can be made ``intelligent'' with on-device machine inference using \sonic.
-\graham{Say something about system stack}
+These applications require a new ULP sensor system stack.
+% 
+\autoref{chapter:sonic} contributed a software component to this new system stack, describing how these devices can be made ``intelligent'' with on-device machine inference using \sonic.
 % 
 However, \sonic also demonstrated that existing systems suffer fundamental
 inefficiencies that demand new, extremely energy-efficient computer
