--- a/manic/6_discuss.tex
+++ b/manic/6_discuss.tex
@@ -1,7 +1,9 @@
 \section{Discussion}
 \label{manic:discuss}
-\graham{Say something about system stack}
-There are four key take-aways from our experience building \manic and the \msilicon prototype.
+Towards the new ULP sensor system stack, \manic contributes new ULP computer architecture and \msilicon contributes a silicon prototype.
+% 
+% Building these systems provided four key take-aways.
+There are four key take-aways from our experience building these systems.
 % 
 First, \msilicon emphasizes even more the inefficiency of existing commodity MCUs.
 % 
