--- a/sonic/8_discuss.tex
+++ b/sonic/8_discuss.tex
@@ -1,7 +1,14 @@
 \section{Discussion}
 \label{sonic:discuss}
 \graham{Say something about system stack}
-Our experience in building \sonictails demonstrates there is a large
+This chapter argued that intelligence ``beyond the edge'' will enable
+new classes of IoT applications and presented \sonic, the software component to the new ULP sensor system stack.
+% 
+\sonic specializes intermittence support for DNN inference to guarantee correct
+execution, regardless of power system, while reducing overheads by
+up to $6.9\times$ and $12.2\times$, respectively, over the prior state-of-the-art.
+
+However, our experience in building \sonictails also showed that there is a large
 opportunity to accelerate inference on ULP sensor devices.
 % 
 However, typical microcontrollers for energy-harvesting systems are poorly
