first pass at riptide

--- a/2_background.tex
+++ b/2_background.tex
@@ -451,6 +451,7 @@ This tagging mechanism maximizes performance, allowing speculation and the re-or
 However, this sort of dynamic tracking of values requires a high power budget (hundreds of mW v. $\approx$1mW of ULP domain) and comes at a significant energy cost.
 
 \paragraph{Ordered-dataflow}
+\label{chapter:background:cgra:ordered}
 Ordered-dataflow designs~\cite{snafu,plasticine,dyser} are the final category of CGRAs.
 % 
 They do not share PE resources and dynamically schedule operations in time, but disallow the re-ordering of tokens.
