--- a/riptide/1_overview.tex
+++ b/riptide/1_overview.tex
@@ -1,7 +1,7 @@
+\figRipTideSystem
+
 \section{RipTide Overview}
 \label{riptide:overview}
-
-\figRipTideSystem
 
 \riptide is a compiler and microarchitecture for ultra-low-power, energy-minimal CGRAs
 (\autoref{fig:riptide:system}).
@@ -43,7 +43,7 @@ to reduce operation count, improve performance, and ease mapping operations onto
 %
 \riptide's CGRA microarchitecture prioritizes energy efficiency above all other metrics.
 %
-It adopts and improves techniques from prior work~\cite{snafu} to
+It adopts and improves techniques from prior \snafu (\autoref{chapter:snafu}~\cite{snafu}) to
 reduce switching activity to minimize fabric energy:
 %
 e.g., mapping exactly one operation per PE,
