--- a/riptide/riptide.tex
+++ b/riptide/riptide.tex
@@ -1,4 +1,4 @@
-\chapter{RipTide compiles}
+\chapter{RipTide: an energy-minimal dataflow compiler and architecture}
 \label{chapter:riptide}
 
 \newcommand{\riptideraw}{RipTide}
