--- a/floats.tex
+++ b/floats.tex
@@ -56,3 +56,16 @@
   \label{tab:motivation}
 \end{table*}
 }
+
+\newcommand{\figFutureModel}{
+  \begin{figure}[htb]
+    \centering
+    \includegraphics[height=0.325in]{figures/pdf/future_model_legend-crop.pdf} 
+
+    \vspace{0.5em}
+
+    \includegraphics[width=0.6\linewidth]{figures/pdf/future_model-crop.pdf} 
+    \caption{Device lifetime as a function of problem size. A \riptide based system smartly discarding uninteresting data achieves similar lifetime to a theoretical system with a 10TOPS/W processor. \riptide (Summary), which only transmits a summary of captured data, increases lifetime even more.}
+    \label{fig:future:model}
+  \end{figure}
+}
